--- a/index.html
+++ b/index.html
@@ -40,23 +40,18 @@
 </p>
 						<span class="copyright">&copy; Personal. Design: Salman.</span>
 					</footer>
-
-			</div>
-		</div>
-<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
-<section>
-	<div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="salman-dabbakuti-400479135"><a class="LI-simple-link" href='https://in.linkedin.com/in/salman-dabbakuti-400479135?trk=profile-badge'>Salman Dabbakuti</a></div>
-</section>
-		<script>
+         </div>
+    </div>
+<script>
 			window.onload = function() { document.body.classList.remove('is-preload'); }
 			window.ontouchmove = function() { return false; }
 			window.onorientationchange = function() { document.body.scrollTop = 0; }
 			</script>
                           <script>
 			document.addEventListener('DOMContentLoaded', (event) => {
-  ((localStorage.getItem('mode') || 'dark') === 'dark') ? document.querySelector('body').classList.add('dark') : document.querySelector('body').classList.remove('dark')
+  ((localStorage.getItem('mode') || 'dark') === 'dark') ? document.querySelector('body').classList.add('dark') : document.querySelector('#body').classList.remove('dark')
 })
 </script>
 		
-	</body>
+</body>
 </html>
