--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>About-Salman Dabbakuti</title>
+		<title>About Me-Salman Dabbakuti</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="main.css" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	</head>
-	<div class= "background">
-		<div class="layer>"
-	<body class="is-preload" class="dark">
+	    </head>
+ <div class= "background">
+	<div class="layer>"
+	  <body class="is-preload" class="dark">
 		<div id="wrapper">
 			<div id="bg"></div>
 			<div id="overlay"></div>
@@ -18,9 +18,9 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Salman Dabbakuti</h1>
-						<p>Electrical Engineer &nbsp;&bull;&nbsp; Blockchain Developer &nbsp;&bull;&nbsp; Security Researcher</p>
-						<nav>
-							<ul>
+						<p>&nbsp;&bull;&nbsp; Blockchain Developer</p>
+						     <nav>
+							    <ul>
 								<li><a href="http://www.twitter.com/salmandabbakuti" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="https://www.facebook.com/dabbakuti.salmon" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="https://www.google.co.in/search?q=Salman+dabbakuti&ie=&oe=" class="icon fa-dribbble"><span class="label">Portfolio</span></a></li>
@@ -32,23 +32,23 @@
 				</div>
 			</div>
 
-				<!-- Footer -->
-					<footer id="footer">
-<p>
+<!-- Footer -->
+<footer id="footer">
+ <p>
   <a style="cursor: pointer" onclick="localStorage.setItem('mode', (localStorage.getItem('mode') || 'dark') === 'dark' ? 'bright' : 'dark'); localStorage.getItem('mode') === 'dark' ? document.querySelector('body').classList.add('dark') : document.querySelector('body').classList.remove('dark')"
-    title="Switch to light or dark theme">🌓 Light|dark mode</a>
+   title="Switch to light or dark theme">🌓 Light|Dark</a>
 </p>
-						<span class="copyright">&copy; Personal. Design: Salman.</span>
-					</footer>
-         </div>
-    </div>
+<span class="copyright">&copy; Salman Dabbakuti</span>
+</footer>
+  </div>
+  </div>
 <script>
-			window.onload = function() { document.body.classList.remove('is-preload'); }
-			window.ontouchmove = function() { return false; }
-			window.onorientationchange = function() { document.body.scrollTop = 0; }
-			</script>
-                          <script>
-			document.addEventListener('DOMContentLoaded', (event) => {
+window.onload = function() { document.body.classList.remove('is-preload'); }
+window.ontouchmove = function() { return false; }
+window.onorientationchange = function() { document.body.scrollTop = 0; }
+
+
+document.addEventListener('DOMContentLoaded', (event) => {
   ((localStorage.getItem('mode') || 'dark') === 'dark') ? document.querySelector('body').classList.add('dark') : document.querySelector('#body').classList.remove('dark')
 })
 </script>
