--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	    </head>
  <div class= "background">
-	<div class="layer>"
+	<div class="layer">
 	  <body class="is-preload" class="dark">
 		<div id="wrapper">
 			<div id="bg"></div>
@@ -18,7 +18,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Salman Dabbakuti</h1>
-						<p>&nbsp;&bull;&nbsp; Blockchain Developer</p>
+						<p>Blockchain Developer | Ethereum | Quorum | Gochain</p>
 						     <nav>
 							    <ul>
 								<li><a href="http://www.twitter.com/salmandabbakuti" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
