--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 				<!-- Header -->
 					<header id="header">
+						<img src="bg.jpeg" alt="Avatar" style="width:200px">
 						<h1>Salman Dabbakuti</h1>
 						<p>Blockchain Developer | Ethereum | Quorum | Gochain</p>
 						     <nav>
