--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ window.onorientationchange = function() { document.body.scrollTop = 0; }
 
 
 document.addEventListener('DOMContentLoaded', (event) => {
-  ((localStorage.getItem('mode') || 'dark') === 'dark') ? document.querySelector('body').classList.add('dark') : document.querySelector('#body').classList.remove('dark')
+  ((localStorage.getItem('mode') || 'dark') === 'dark') ? document.querySelector('body').classList.add('dark') : document.querySelector('body').classList.remove('dark')
 })
 </script>
 		
