--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 							    <ul>
 								<li><a href="http://www.twitter.com/salmandabbakuti" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="https://www.facebook.com/dabbakuti.salmon" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="https://www.google.co.in/search?q=Salman+dabbakuti&ie=&oe=" class="icon fa-dribbble"><span class="label">Portfolio</span></a></li>
+								<li><a href="https://medium.com/@Salmandabbakuti" class="icon fa-medium"><span class="label">Portfolio</span></a></li>
 								<li><a href="https://github.com/Salmandabbakuti" class="icon fa-github"><span class="label">Github</span></a></li>
 								<li><a href="mailto:share2salman@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 							</ul>
