--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<img src="./images/dp.jpg" alt="Avatar" style="width:200px">
+						<img src="./images/dp.png" alt="Avatar" style="width:200px">
 						<h1>Salman Dabbakuti</h1>
 						<p>Blockchain Developer | Ethereum | Quorum | Gochain</p>
 						     <nav>
